--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "consign": "^0.1.2",
+    "cors": "^2.8.5",
     "express": "^4.13.4"
   }
 }
